# raspberrypi-pico-serial-to-hid

./: CMakeLists.txt  README.md  pico-serial-to-hid.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
